modif nav speciale

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                               <h3>
                                 <span>Votre entreprise </span
                                 >&nbsp;&nbsp;&nbsp;à portée de main :
-                                <a class="linkoffre" href="offre.html">
+                                <a id="navspeciale" class="linkoffre" href="offre.html">
                                   Faites le tour!!</a
                                 >
                               </h3>
