--- a/index.html
+++ b/index.html
@@ -65,12 +65,9 @@
 
                             <div class="line">
                               <a href="#" class="sub-menu-link">
-                                <img
-                                  src=""
-                                  alt=""
-                                  loading="lazy"
-                                  class="mr-1 blue"
-                                />
+                                <span class="material-symbols-outlined">
+                                  clock_loader_20
+                                  </span>
                                 <div>
                                   <div class="sub-menu-link-title">
                                     App "planning"
@@ -457,11 +454,12 @@
                     <div class="box2">
                       <i class="fas fa-chart-bar"></i>
                       <div class="alignprcnt">
-                        <span class="num2">100</span>
+                        <span class="num2">99</span>
                         <span class="prcnt">%</span>
                       </div>
 
-                      <span class="infochiffre"> de clients satisfaits</span>
+                      <span class="infochiffre"> De vos besoins satisfaits...<p>la perfection n'existe pas mais nous ferons tout pour nous en approcher!</p></span>
+                      
                     </div>
                   </div>
                 </div>
@@ -1041,7 +1039,7 @@
                         <div>
                           <a href="contact.html"> Contactez-nous </a>
 
-                          <a href="#"> Nous rejoindre </a>
+                          <a href="job.html"> Nous rejoindre </a>
 
                           <a href="#"> Conditions d'utilisation </a>
                         </div>
