--- a/index.html
+++ b/index.html
@@ -317,8 +317,8 @@
 
               <div class="title mb-4">
                 <h2>
-                  <code></code>Gérez votre entreprise
-                  <span>sur place ou à distance</span>
+                  <code></code>May'Tech
+                  <span>en quelques mots ...</span>
                 </h2>
               </div>
 
@@ -326,9 +326,8 @@
                 <div class="col-md-6">
                   <div class="legend-left mb-2">
                     <p>
-                      Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                      Distinctio nesciunt omnis tenetur atque sequi dicta
-                      temporibus magnam cum ratione! Mollitia?
+                   Né de la rencontre , entre 3 entreprises specialisées dans leur domaine, May'Tech s'est formée autour du développement web , de l'expertise logistique et commerciale.
+                   Fort de la connaissance du monde de l'artisanat et de ses besoins, May'Tech a su développer les outils inispensebles du quotidien .
                     </p>
                     <p>&nbsp;</p>
                     <div>
@@ -458,7 +457,7 @@
                         <span class="prcnt">%</span>
                       </div>
 
-                      <span class="infochiffre"> De vos besoins satisfaits...<p>la perfection n'existe pas mais nous ferons tout pour nous en approcher!</p></span>
+                      <span class="infochiffre"> De vos besoins satisfaits...<p>(la perfection n'existe pas mais nous ferons tout pour nous en approcher!)</p></span>
                       
                     </div>
                   </div>
