--- a/index.html
+++ b/index.html
@@ -326,8 +326,8 @@
                 <div class="col-md-6">
                   <div class="legend-left mb-2">
                     <p>
-                   Né de la rencontre , entre 3 entreprises specialisées dans leur domaine, May'Tech s'est formée autour du développement web , de l'expertise logistique et commerciale.
-                   Fort de la connaissance du monde de l'artisanat et de ses besoins, May'Tech a su développer les outils inispensebles du quotidien .
+                   Née de la rencontre entre 3 entreprises specialisées dans leur domaine, May'Tech s'est formée autour du développement web , de l'expertise logistique et commerciale ainsi que.
+                   Fort de la connaissance du monde de l'artisanat et de ses besoins, notre entreprise a su développer les outils indispensables du quotidien .
                     </p>
                     <p>&nbsp;</p>
                     <div>
@@ -346,28 +346,28 @@
                       <span class="material-symbols-outlined">
                         toggle_on
                         </span>
-                      <span> Lorem, ipsum. &amp; lorem </span>
+                      <span> Audit &amp; conseil logistique. </span>
                     </div>
 
                     <div class="asset d-flex align-items-center mb-1">
                       <span class="material-symbols-outlined">
                         key
                         </span>
-                      <span> Lorem ipsum dolor sit amet consectetur.</span>
+                      <span> Stratégie de business development.</span>
                     </div>
 
                     <div class="asset d-flex align-items-center mb-1">
                       <span class="material-symbols-outlined">
                         sync
                         </span>
-                      <span> lorem &amp; Lorem, ipsum. </span>
+                      <span> Accompagnement numérique . </span>
                     </div>
 
                     <div class="asset d-flex align-items-center mb-1">
                       <span class="material-symbols-outlined">
                         done_outline
                         </span>
-                      <span> Lorem, ipsum dolor. </span>
+                      <span> Développement d'Application complète. </span>
                     </div>
 
                     <div class="asset d-flex align-items-center mb-1">
@@ -375,7 +375,7 @@
                         heart_plus
                         </span>
                       <span
-                        >Lorem ipsum dolor sit, amet consectetur adipisicing.
+                        >Marketing Digital.
                       </span>
                     </div>
                   </div>
