--- a/index.html
+++ b/index.html
@@ -332,11 +332,7 @@
                     <p>&nbsp;</p>
                     <div>
                       <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing
-                        elit. Quam quae pariatur repellat voluptates vitae
-                        quasi, dolore porro, quisquam placeat quos mollitia ab
-                        impedit veritatis, esse harum suscipit nulla alias
-                        laboriosam!
+                       Suite au développement d'un premier projet commun , nous avons mis en pratique...
                       </p>
                     </div>
                   </div>
@@ -380,7 +376,7 @@
                     </div>
                   </div>
 
-                  <a href="#" class="cta-primary"> Lorem ipsum dolor sit. </a>
+                  <a href="offre.html" class="cta-primary"> Découvrir vos outils. </a>
 
                   <div class="img-wrapper mt-4">
                     <svg
@@ -481,8 +477,8 @@
                 <div class="mb-4 col-12 offset-md-1">
                   <div class="title">
                     <h2>
-                      Lorem ipsum dolor sit amet.
-                      <span>Lorem ipsum dolor sit.</span>
+                      Nos outils disponibles
+                      <span>au bout de vos doigts.</span>
                     </h2>
                   </div>
                 </div>
@@ -533,16 +529,13 @@
                         <div class="p mb-4">
                           <p>
                             <span
-                              >Lorem ipsum dolor sit amet.
+                              >Nous vous avons préparer un bouquet d'applications prêtes à l'emploi.
                               <strong
-                                >Lorem ipsum dolor sit amet consectetur
-                                adipisicing elit.</strong
+                                >Celles ci couvrent un large panel des besoins liés à l'activité quotidienne de votre entreprise.</strong
                               >. </span
                             ><span
-                              >Lorem ipsum dolor sit amet, consectetur
-                              adipisicing elit. Blanditiis, ab? Aliquid eius
-                              quis autem ea, perspiciatis blanditiis eligendi
-                              reiciendis obcaecati!.</span
+                              >Franchissez le cap, numérisez votre activité!
+                              </span
                             >
                           </p>
                         </div>
@@ -552,30 +545,30 @@
                             <span class="material-symbols-outlined">
                               swipe_left
                               </span>
-                            <span> Lorem, ipsum dolor. </span>
+                            <span> Outil de plannification. </span>
                           </div>
 
                           <div class="asset d-flex align-items-center mb-1">
                             <span class="material-symbols-outlined">
                               send_time_extension
                               </span>
-                            <span> Lorem, ipsum. </span>
+                            <span> Gestion de stock. </span>
                           </div>
 
                           <div class="asset d-flex align-items-center mb-1">
                             <span class="material-symbols-outlined">
                               swipe_up
                               </span>
-                            <span> lorem &amp; Lorem, ipsum. </span>
+                            <span> Gestion de biens locatifs. </span>
                           </div>
 
                           <div class="asset d-flex align-items-center mb-1">
                             <span class="material-symbols-outlined">
                               data_info_alert
                               </span>
-                            <span> Lorem ipsum dolor sit. </span>
+                            <span> Gestion ressources humaines. </span>
                           </div>
-
+<!-- 
                           <div class="asset d-flex align-items-center mb-1">
                             <span class="material-symbols-outlined">
                               clock_loader_20
@@ -584,7 +577,7 @@
                               Lorem ipsum dolor sit amet consectetur.
                             </span>
                           </div>
-                        </div>
+                        </div> -->
 
                         <div class="quote-inner">
                           <div class="left mr-1">
