--- a/index.html
+++ b/index.html
@@ -597,12 +597,7 @@
 
                             <div class="author mt-1">
                               <div class="img-wrapper">
-                                <img
-                                  class="fit-cover"
-                                  src="assets/showpizz.png"
-                                  alt=""
-                                  loading="lazy"
-                                />
+                                
                               </div>
 
                               <div>
@@ -614,8 +609,8 @@
                         </div>
                       </div>
 
-                      <a class="cta-primary" href="">
-                        Lorem ipsum dolor sit amet.
+                      <a class="cta-primary" href="offre.html">
+                        Voir les offres.
                       </a>
                     </div>
                   </div>
