--- a/index.html
+++ b/index.html
@@ -634,7 +634,7 @@
 
               <div class="title mb-4">
                 <h2>
-                  <span>Lorem ipsum dolor sit.</span>Lorem ipsum dolor sit amet.
+                  <span>Venez avec vos idées!</span>Nous les développerons ensemble!
                 </h2>
               </div>
 
@@ -686,23 +686,18 @@
                   <div class="legend-left mb-2">
                     <p>
                       <strong
-                        >Lorem ipsum dolor sit amet consectetur adipisicing
-                        elit. Dolorem ducimus quo ratione.</strong
+                        >Et si vous vouliez aller plus loin?.</strong
                       >
                       <span
-                        >Lorem, ipsum dolor sit amet consectetur adipisicing
-                        elit. Quaerat, reprehenderit sed quisquam et animi
-                        maxime reiciendis numquam aut, perspiciatis molestiae
-                        consequuntur inventore corrupti..</span
+                        >Rassurez vous, nous développons des applications sur-mesure, à la demande. Fonctionnalités supplémentaires ou projets complets.</span
                       >
                     </p>
                     <p>&nbsp;</p>
                     <p>
                       <span
-                        >Lorem, ipsum dolor.
-                        <strong>Lorem ipsum dolor sit amet consectetur.</strong>
-                        Lorem ipsum dolor sit amet.
-                        <strong>Lorem ipsum dolor sit amet.</strong>.</span
+                        >Obtenir votre propre application
+                        <strong>vous apporte autant de plus value sur votre entreprise .</strong>
+                        que de maitrise de son évolution au futur.</span
                       >
                     </p>
                   </div>
