--- a/index.html
+++ b/index.html
@@ -677,8 +677,8 @@
                   <div class="counter-sec2">
                     <div class="box2">
                       <i class="fas fa-chart-bar"></i>
-                      <div class="num2">250</div>
-                      <span class="infochiffre"> Nombre de ventes</span>
+                      <div class="num2">2547</div>
+                      <span class="infochiffre"> Utilisateurs de nos outils</span>
                     </div>
                   </div>
                 </div>
@@ -695,8 +695,8 @@
                     <p>&nbsp;</p>
                     <p>
                       <span
-                        >Obtenir votre propre application
-                        <strong>vous apporte autant de plus value sur votre entreprise .</strong>
+                        ><strong>Obtenir votre propre application</strong>
+                        vous apporte autant de plus value sur votre entreprise,
                         que de maitrise de son évolution au futur.</span
                       >
                     </p>
@@ -707,39 +707,39 @@
                       <span class="material-symbols-outlined">
                         mood
                         </span>
-                      <span>Lorem, ipsum. &amp; lorem </span>
+                      <span>Personnalisation graphique. </span>
                     </div>
 
                     <div class="asset d-flex align-items-center mb-1">
                       <span class="material-symbols-outlined">
                         emoji_people
                         </span>
-                      <span> Lorem, ipsum. </span>
+                      <span> Flexibilité. </span>
                     </div>
 
                     <div class="asset d-flex align-items-center mb-1">
                       <span class="material-symbols-outlined">
                         whatshot
                         </span>
-                      <span> Lorem, ipsum dolor. &amp; lorem </span>
+                      <span> Technique métier. </span>
                     </div>
 
                     <div class="asset d-flex align-items-center mb-1">
                       <span class="material-symbols-outlined">
                         psychiatry
                         </span>
-                      <span> Lorem, ipsum.</span>
+                      <span> Connexion CRM.</span>
                     </div>
 
-                    <div class="asset d-flex align-items-center mb-1">
+                    <!-- <div class="asset d-flex align-items-center mb-1">
                       <span class="material-symbols-outlined">
                         earthquake
                         </span>
                       <span> lorem </span>
                     </div>
-                  </div>
+                  </div> -->
 
-                  <a href="#" class="cta-primary"> Lorem ipsum dolor sit. </a>
+                  <a href="contact.html" class="cta-primary"> Contactez nous!. </a>
                 </div>
               </div>
 
