--- a/index.html
+++ b/index.html
@@ -761,21 +761,19 @@
                   <div class="title">
                     <h2>
                       <span> L' équipe May'tech,<br /></span>une petite équipe
-                      pour de grands logiciels
+                      pour de grandes solutions.
                     </h2>
                   </div>
                   <div class="description">
                     <p>
                       <span
-                        >Lorem ipsum dolor, sit amet consectetur adipisicing
-                        elit. Necessitatibus magni dolore in consequatur aut,
-                        eos laudantium et voluptate?!</span
+                        >Nous développons donc autant d'outils prêts à l'emploi que de solutions sur-mesures. Plus qu'une philosophie, une façon de travailler, en vous mettant au coeur de la digitalisation de votre business.</span
                       >
                     </p>
                   </div>
 
-                  <a href="" class="cta-primary white">
-                    Pourquoi choisir May'Tech?
+                  <a href="#bashome" class="cta-primary white">
+                    Et pour mon marketing digital?
                   </a>
                 </div>
                 <div class="col-md-6 inner col-12">
@@ -812,7 +810,7 @@
           data-hs-cos-general-type="widget"
           data-hs-cos-type="module"
         >
-          <div id="" class="section-testimonial section-xl pb-0">
+          <div id="bashome" class="section-testimonial section-xl pb-0">
             <div class="container">
               <img class="arrow-down-right" src="" alt="" loading="lazy" />
 
