--- a/index.html
+++ b/index.html
@@ -818,8 +818,8 @@
                 <div class="mb-4 col-md-10 offset-md-2">
                   <div class="title">
                     <h2>
-                      Lorem ipsum dolor 
-                      <span>Lorem, ipsum dolor </span>
+                      Boostez
+                      <span>votre marketing digital </span>
                     </h2>
                   </div>
                 </div>
@@ -867,23 +867,13 @@
                         <div class="p mb-4">
                           <div>
                             <p>
-                              <strong>Lorem ipsum dolor sit amet.</strong>,
-                              Lorem ipsum dolor sit amet consectetur,
-                              adipisicing elit. Doloremque nemo unde libero..<br /><br />
+                              En tant qu'entreprise de développement web, nous sommes également spécialisés dans le marketing digital. Grâce à notre expertise, nous vous aidons à accroître votre visibilité et votre impact en ligne en utilisant des stratégies telles que le référencement, la publicité en ligne, la gestion des médias sociaux et le marketing de contenu. Notre objectif est de vous aider à vous démarquer dans le monde numérique concurrentiel.<br /><br />
                             </p>
                             <p>
-                              Lorem ipsum dolor sit amet consectetur adipisicing
-                              elit. Corrupti.<span>&nbsp;</span
-                              ><strong
-                                >Lorem ipsum dolor sit amet consectetur
-                                adipisicing elit. Cum, voluptatibus!</strong
-                              ><span>&nbsp;</span>Lorem, ipsum dolor..<br /><br />
+                              En travaillant avec notre équipe expérimentée, vous bénéficierez d'une approche sur mesure axée sur l'acquisition de nouveaux clients, l'augmentation des conversions et la fidélisation de la clientèle. Nous sommes passionnés par votre succès en ligne et nous nous engageons à fournir des solutions numériques innovantes qui donnent des résultats mesurables.<br /><br />
                             </p>
                             <p>
-                              Lorem, ipsum dolor sit amet consectetur
-                              adipisicing elit. Quam unde error dolore qui
-                              beatae fuga eveniet temporibus, recusandae esse
-                              totam impedit sunt dolorem tempora necessitatibus?
+                              Avec notre expertise en marketing digital, votre entreprise sera prête à prospérer dans l'économie numérique en plein essor. Faites équipe avec nous pour accélérer votre croissance en ligne.
                             </p>
                           </div>
                         </div>
