texte final home

--- a/index.html
+++ b/index.html
@@ -686,7 +686,7 @@
                   <div class="legend-left mb-2">
                     <p>
                       <strong
-                        >Et si vous vouliez aller plus loin?.</strong
+                        >Et si vous vouliez aller plus loin ?</strong
                       >
                       <span
                         >Rassurez vous, nous développons des applications sur-mesure, à la demande. Fonctionnalités supplémentaires ou projets complets.</span
@@ -739,7 +739,7 @@
                     </div>
                   </div> -->
 
-                  <a href="contact.html" class="cta-primary"> Contactez nous!. </a>
+                  <a href="contact.html" class="cta-primary"> Contactez nous! </a>
                 </div>
               </div>
 
@@ -936,19 +936,16 @@
                 <div class="row">
                   <div class="col-md-6 left">
                     <h2>
-                      Ils nous ont fait confiance<br /><span>Et vous ?</span>
+                      Le monde accélère<br /><span>Et vous ?</span>
                     </h2>
                   </div>
                   <div class="col-md-6 right">
                     <div class="legend mb-2">
-                      Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                      Facere natus reiciendis, cumque distinctio atque deleniti
-                      quaerat nesciunt, voluptates rem, corrupti cum id placeat
-                      saepe ipsam!
+                      Nous vous avons présenter une synthèse de nos activités, que ce soit un outil clef en main , une solution personnalisée ou du markting digital, nous sommes présents pour vous accompagner dans ce monde de demain.Plus qu'une étape... un café pour en discuter!
                     </div>
 
-                    <a href="" class="cta-primary white">
-                      Demander des renseignements!
+                    <a href="contact.html" class="cta-primary white">
+                      J'y vais!
                     </a>
                   </div>
                 </div>
