--- a/offre.html
+++ b/offre.html
@@ -275,7 +275,7 @@
           data-hs-cos-general-type="widget"
           data-hs-cos-type="module"
         >
-          <div id="" class="section-hero-solutions">
+          <div id="toppage" class="section-hero-solutions">
             <svg
               class="svg-bg-inner"
               width="2302"
@@ -1078,7 +1078,7 @@
           data-hs-cos-general-type="widget"
           data-hs-cos-type="module"
         >
-          <div id="" class="section-discover-meeko section-lg">
+          <div id="" class="section-discover-maytech section-lg">
             <div class="container">
               <div class="row">
                 <div class="col-md-3">
@@ -1365,7 +1365,7 @@
                   <div class="col-md-6 left">
                     <h2>
                       Lorem ipsum dolor sit.<br /><span
-                        >Lorem, ipsum dolor.?</span
+                        >Lorem, ipsum dolor?</span
                       >
                     </h2>
                   </div>
@@ -1383,8 +1383,14 @@
               </div>
             </div>
           </div>
-        </div></span
-      >
+        </div></span>
+        <div class="btnbottomtotop">
+          <a class="cta-primary white" href="#toppage">
+            <span class="material-symbols-outlined">
+              north
+              </span>
+          </a>
+        </div>
       <!-- Sticky arrow-up -->
 
       <div data-global-resource-path="">
