--- a/contact.html
+++ b/contact.html
@@ -12,6 +12,7 @@
     <link rel="canonical" href="#" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <script defer src="js/block.js"></script>
+    <script defer src="js/morph.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta property="og:image" content="#" />
     <meta http-equiv="content-language" content="fr-fr" />
@@ -40,7 +41,7 @@
         <div class="row d-flex align-items-center justify-content-center mb-md-8 mb-4">
             <div class="col-md-2 col-6">
                 <a href="index.html">
-                    <img class="img-fluid" src="assets/logo.png" alt=""  srcset="assets/logo.png" sizes="(max-width: 183px) 100vw, 183px">
+                    <img id="logomorph" class="img-fluid" src="assets/logo.png" alt=""  srcset="assets/logo.png" sizes="(max-width: 183px) 100vw, 183px">
                 </a>
             </div>
         </div>
@@ -54,7 +55,7 @@
             <p>&nbsp;</p>
             <p><strong>Pour nous contacter par téléphone : <br></strong><strong>06 40 65 57 42</strong></p>
             <p>&nbsp;</p>
-            <p><strong>Vous êtes une entreprise</strong> et vous avez une question.<strong><br></strong>Accédez au <strong><a href="#" rel="noopener">formulaire de contact</a>.</strong></p></div>
+            <p><strong>Vous avez un talent incroyable?</strong> et vous souhaitez travailler avec une équipe de rêve?<strong><br></strong>Rencontrons nous! clique sur ce lien -> <strong><a href="job.html" rel="noopener">Accès au taf de rêve.</a>.</strong></p></div>
                             </div>
             </div>
             <div class="col-md-6 offset-md-1 col-12 mt-md-0 mt-3">
