--- a/job.html
+++ b/job.html
@@ -132,13 +132,13 @@
                       <p>
                         <span style="font-size: 18px"
                           ><a
-                            href="https://share.hsforms.com/1shHW-zcmQ7KUcF-cJLIQ8Q35dbg"
+                            href="single-job.html"
                             rel="noopener"
                             >-&gt; Developpeur Full stack React/Node</a
                           ></span
                         ><br /><span style="font-size: 18px"
                           ><a
-                            href="https://share.hsforms.com/1lPzUQqMVTb62MTKQW8AZfA35dbg"
+                            href="single-job.html"
                             rel="noopener"
                             >-&gt; Developpeur Full stack Vue/Node</a
                           ></span
